--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>New Letter</title>
+    <title>New Arcticle Pop Up</title>
     <link rel="stylesheet" href="style.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.6.0/css/all.min.css" integrity="sha512-Kc323vGBEqzTmouAECnVceyQqyqdsSiqLQISBL29aUW4U/M7pSPA/gEUZQqv1cwx4OnYxTxve5UMg5GT6L4JJg==" crossorigin="anonymous" referrerpolicy="no-referrer" />
 </head>
@@ -20,9 +20,9 @@
         <div class="box">
             <button type="submit">Sign Up</button>
         </div>
-        <a class="button" onclick="toggleNewsLetter()">
+        <a class="close" onclick="toggleNewsLetter()">
             
-            <i class="fa fa-times fa-2x" aria-hidden="true"></i>
+            <i class="fa fa-times" aria-hidden="true"></i>
     
         </a>
     </div>
